# agent-tools

./: .gitignore  README.md  install.sh
eml_to_html/: pyproject.toml
eml_to_html/eml_to_html/: cli.py  converter.py
notion-mirror/: README.md  pyproject.toml
notion-mirror/notion_mirror/: assets.py  cli.py  client.py  config.py  context.py  converter.py  log.py  mirror.py
notion-mirror/tests/: test_deleted_status.py
ytscribe/: README.md  pyproject.toml
ytscribe/ytscribe/: claude_runner.py  cli.py  frames.py  metadata.py  models.py  prompts.py  template.py  transcript.py  vault.py  video.py
ytscribe/ytscribe/templates/: note.md.j2  transcript.md.j2
